--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ rect {
 }
 
 path {
-	stroke-width:3;
-	fill:none;
+	stroke-width:2;
+	fill:none !important;
 	opacity:.7;
 }
 
@@ -58,34 +58,33 @@ body, html {
 	display:none;
 }
 
-/*
-#bg {
-	background:url(http://upload.wikimedia.org/wikipedia/commons/2/20/Nagoya_Airport_view_from_promenade.jpg);
-	background-size:cover;
-	width:100%;
-	height:100%;
-	position:fixed;
-	z-index:-1;
-	opacity:.3;
-}
-*/
-
 .popover {
 	z-index:9999;
 	left:0 !important;
 	right:0 !important;
 }
 
+label + span {
+	font-weight:700;
+}
 
 label {
-color:#fff;
-font-weight:700;
--webkit-touch-callout: none;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
+	float:left;
+	margin-right:5%;
+	width:20px;
+}
+
+.toggles {
+	float:left;
+}
+
+div.airline {
+	clear:both;
+	width:100%;
+}
+
+.clear {
+	clear:both;
 }
 
 #sel {
@@ -93,6 +92,11 @@ user-select: none;
 	top:15px;
 	right:15px;
 	padding:1%;
-	min-width:100px;
+	min-width:145px;
 	box-shadow: 0 0 20px #ccc;
+}
+
+#sel button {
+	padding:1px 8px;
+	-webkit-transition:width 1s;
 }
