--- a/style.css
+++ b/style.css
@@ -74,8 +74,9 @@ label {
 	width:20px;
 }
 
-.toggles {
-	float:left;
+td {
+	min-width:65px;
+	padding:10% 1%;
 }
 
 div.airline {
@@ -87,16 +88,22 @@ div.airline {
 	clear:both;
 }
 
-#sel {
+#controls {
 	position:absolute;
-	top:15px;
-	right:15px;
+	top:0;
+	right:0;
 	padding:1%;
-	min-width:145px;
-	box-shadow: 0 0 20px #ccc;
+	box-shadow: 0 0 25px #aaa;
+	background:rgba(0,0,0,.6);
+	color:#fff;
+	height:100%;
 }
 
-#sel button {
+#controls span {
+	color:#fff;
+}
+
+#controls button {
 	padding:1px 8px;
 	-webkit-transition:width 1s;
 }
