Updated dynamic stylesheet
Uses HSL colors

--- a/style.less
+++ b/style.less
@@ -53,14 +53,13 @@ body, html {
 	display:none;
 }
 
-label + span {
-	font-weight:700;
-}
-
 label {
 	float:left;
 	margin-right:5%;
 	width:20px;
+	+ & span {
+		font-weight:700;
+	}
 }
 
 td {
