--- a/style.less
+++ b/style.less
@@ -98,14 +98,9 @@ td {
 }
 
 #controls {
-	position:absolute;
-	left:0;
-	top:0;
-	z-index:10;
 	padding:1%;
 	box-shadow: 0 0 25px #aaa;
-	background:rgba(0,0,0,.6);
-	color:#fff;
+	width:100%;
 	span {
 		color:#fff;
 	}
