--- a/style.less
+++ b/style.less
@@ -1,3 +1,15 @@
+//typography
+h1, h2, h3, h4, .btn, body {
+	font-family:"Segoe UI Light","Helvetica Neue","Segoe UI","Segoe WP",sans-serif;
+}
+
+button, a, .btn, .btn-group {
+	-webkit-border-radius:0 !important;
+	-moz-order-radius:0 !important;
+	border-radius:0 !important;
+	background-image:none;
+}
+
 .axis {
 	font-size:12px;
 	font-family:"Open Sans",sans-serif;
@@ -33,13 +45,6 @@ path {
 body, html {
 	margin:0;
 	padding:0;
-	font-family:"Open Sans",sans-serif;
-}
-
-.btn-group {
-	margin:1% auto;
-	display:block;
-	text-align:center;
 }
 
 .checkbox input[type="checkbox"] {
@@ -71,7 +76,7 @@ body, html {
 	img {
 		display:block;
 		margin:0 auto;
-		margin-top:10%;
+		margin-top:4%;
 	}
 }
 
@@ -84,11 +89,6 @@ label {
 	}
 }
 
-td {
-	min-width:65px;
-	padding:5% 1%;
-}
-
 .clear {
 	clear:both;
 }
@@ -98,13 +98,26 @@ td {
 }
 
 #controls {
-	padding:1%;
 	box-shadow: 0 0 25px #aaa;
 	width:100%;
-	span {
-		color:#fff;
+	max-width:100%;
+	.inner {
+		padding:1% 3%;
 	}
-	button {
-		padding:1px 8px;
+	h1 {
+		margin-top:0;
+		font-size:20px;
+		font-weight:300;
 	}
+	.btn-group {
+		margin:1% auto;
+		display:block;
+	}
+	.row-fluid [class*="span"] {
+		border-right:1px solid #ccc;
+	}
+	.row-fluid .span1 {
+		border:none;
+	}
+	
 }
