--- a/style.less
+++ b/style.less
@@ -1,9 +1,11 @@
+@border:1px solid #ccc;
+
 //typography
 h1, h2, h3, h4, .btn, body {
 	font-family:"Segoe UI Light","Helvetica Neue","Segoe UI","Segoe WP",sans-serif;
 }
 
-button, a, .btn, .btn-group {
+button, a, .btn, .btn-group, .dropdown-menu {
 	-webkit-border-radius:0 !important;
 	-moz-order-radius:0 !important;
 	border-radius:0 !important;
@@ -45,6 +47,13 @@ path {
 body, html {
 	margin:0;
 	padding:0;
+	color:#222;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .checkbox input[type="checkbox"] {
@@ -80,15 +89,6 @@ body, html {
 	}
 }
 
-label {
-	float:left;
-	margin-right:5%;
-	width:20px;
-	+ & span {
-		font-weight:700;
-	}
-}
-
 .clear {
 	clear:both;
 }
@@ -98,11 +98,20 @@ label {
 }
 
 #controls {
+	position:absolute;
+	top:0;
 	box-shadow: 0 0 25px #aaa;
 	width:100%;
 	max-width:100%;
+	background:rgba(245,245,245,.9);
 	.inner {
 		padding:1% 3%;
+	}
+	.close {
+		font-size:20px;
+		position:absolute;
+		top:1%;
+		right:1%;
 	}
 	h1 {
 		margin-top:0;
@@ -110,14 +119,59 @@ label {
 		font-weight:300;
 	}
 	.btn-group {
-		margin:1% auto;
+		margin:1% 2%;
 		display:block;
+		float:left;
 	}
 	.row-fluid [class*="span"] {
-		border-right:1px solid #ccc;
+		border-right:@border;
 	}
 	.row-fluid .span1 {
 		border:none;
+	}	
+	.dropdown-menu {
+		padding:20%;
+		margin:0;
+		background:#fff;
+		ul {
+		overflow:hidden;
+		padding-left:0;
+		margin-left:0;	
+		}
+		li {
+			display:block;
+			width: 28%;
+			float:left;
+			margin-right:5%;
+			.checkbox input[type="checkbox"] {
+				margin-left:0;
+			}
+		}
+		&.airports label {
+			color:#222;
+			border:none;
+			padding:2%;
+		}
+		label {
+			padding:8%;
+			font-weight:700;
+			font-size:18px;
+			color:#fff;
+			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+			border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+			border:1px solid;
+		}
 	}
+}
+
+img.tools {
+	display:none;
+	border-bottom:@border;
+	border-left:@border;
+	border-right:@border;
+	position:absolute;
+	right:3%;
+	top:0;
+	max-width:3%;
 	
 }
