Slider and functions updated

--- a/style.less
+++ b/style.less
@@ -130,7 +130,8 @@ body, html {
 		border:none;
 	}	
 	.dropdown-menu {
-		padding:20%;
+		padding:10%;
+		max-width:1000%;
 		margin:0;
 		background:#fff;
 		ul {
@@ -153,7 +154,7 @@ body, html {
 			padding:2%;
 		}
 		label {
-			padding:8%;
+			padding:2%;
 			font-weight:700;
 			font-size:18px;
 			color:#fff;
