--- a/style.less
+++ b/style.less
@@ -5,7 +5,6 @@
 //typography
 h1, h2, h3, h4, .btn, body {
 	font-family:"Segoe UI Light","Helvetica Neue","Segoe UI","Segoe WP",sans-serif;
-	font-size:@baseFontSize;
 }
 
 // get rid of rounded borders
@@ -90,18 +89,23 @@ em {
 	}
 }
 
-.dateSlider {
-	.ui-rangeSlider-label {
-		bottom:0;
-		top:0;
-		background:#555;
-		color:#fff;
-		height:100%;
+.dateContainer {
+	float:right;
+	margin:2% 4% 2% 0;
+	width:50%;
+	.ui-rangeSlider-label-inner {
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		display: block;
+		z-index: 99;
+		border-left: 10px solid transparent;
+		border-right: 10px solid transparent;
+		margin-left: -10px;
+		border-top: 10px solid #888DA0;
 	}
-	max-width:90%;
-	min-height: 22px;
-	margin:2% 0;
-}	
+	
+}
 
 .checkbox input[type="checkbox"] {
 	margin-left:-10px;
@@ -181,7 +185,7 @@ em {
 			border-bottom:@border;
 		}
 	}
-	.row-fluid .span1 {
+	.row-fluid .span3 {
 		border:none;
 	}	
 	.dropdown-menu {
