Some database optimizations

--- a/style.less
+++ b/style.less
@@ -227,7 +227,7 @@ em {
 img.tools {
 	cursor:pointer;
 	display:none;
-	position:absolute;
+	position:fixed;
 	right:3%;
 	box-shadow:0 0 10px #ccc;
 	max-width:5%;
