--- a/style.less
+++ b/style.less
@@ -251,6 +251,16 @@ img.tools {
 	ul {
 		list-style:none;
 		margin:0;
+		label {
+			margin:0;
+			padding-left:5%;
+			box-shadow: inset 0 0 5px black;
+			color:#fff;
+			display:none;
+		}
+	}
+	h2 {
+		color:@baseColor;
 	}
 }
 
