--- a/style.less
+++ b/style.less
@@ -268,3 +268,13 @@ img.tools {
 		padding:2%;
 	}
 }
+
+.greyed {
+	fill:#ccc;
+	opacity:.1;
+	background:none !important;
+	color:#ccc !important;
+	-webkit-transition:.3s background ease-in-out, .3s color ease-in-out;
+	-moz-transition:.3s background ease-in-out, .3s color ease-in-out;
+	transition:.3s background ease-in-out, .3s color ease-in-out;
+}	
