--- a/style.less
+++ b/style.less
@@ -227,7 +227,7 @@ img.tools {
 	cursor:pointer;
 	display:none;
 	position:fixed;
-	right:3%;
+	left:3%;
 	box-shadow:0 0 10px #ccc;
 	max-width:5%;
 	&.top {
@@ -245,8 +245,20 @@ img.tools {
 	max-width:200px;
 	position:fixed;
 	right:0;
-	top:15%;
+	top:0;
 	padding:15px;
+	.plus {
+		text-align:center;
+		display:block;
+		min-width:20px;
+		min-height:20px;
+		background:#999;
+		color:#fff;
+	}
+	h3 {
+		color:@baseColor;
+		margin-top:0;
+	}
 	ul {
 		list-style:none;
 		margin:0;
@@ -254,14 +266,23 @@ img.tools {
 			position:relative;
 			margin:0;
 			padding-left:5%;
-			box-shadow: inset 0 0 5px black;
+			box-shadow: inset 0 0 2px black;
 			color:#fff;
 			display:none;
+			cursor:default;
+			&.labelDim {
+				background:#ccc;
+				color:#222;
+				.closeLabel {
+					color:@baseColor;
+				}
+			}
 			.closeLabel {
 				color:#fff;
 				opacity:.8;
 				font-size:@baseFontSize;
 			}
+			
 		}
 	}
 	h2 {
